🎨 style : 소나 큐브 해결 방안 적용